# CarConnectivity-plugin-mqtt_homeassistant

./: CHANGELOG.md  README.md  pyproject.toml  setup_requirements.txt
.github/workflows/: build.yml  build_and_publish.yml
doc/: Config.md
src/carconnectivity_plugins/mqtt_homeassistant/: plugin.py
src/carconnectivity_plugins/mqtt_homeassistant/ui/: plugin_ui.py
test/integration_test/: carConnectivity.json
